Fix spacing and cut off contents in extension pg

--- a/Extension-Community.css
+++ b/Extension-Community.css
@@ -16,8 +16,8 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 700;  
     margin-top: 0.5em;
- }
- .extension-desc{
+}
+.extension-desc{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,11 +25,11 @@
     font-size: 1.2em;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
-    margin: 0 10em;
+    margin: 0 10%;
     margin-top: 1em;
     margin-bottom: 3em;
     text-align: center;
- }
+}
 
 .extension-img-1 img{
     width: 1000px;
@@ -54,7 +54,7 @@
     flex-direction: column;
     align-items: center;
  }
- 
+
  .extension-cssd-desc{
     display: flex;
     align-items: center;
@@ -63,7 +63,7 @@
     font-size: 1.2em;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
-    margin: 0 10em;
+    margin: 0 10%;
     margin-top: 1em;
     margin-bottom: 2em;
     text-align: center;
@@ -75,7 +75,7 @@
     display: flex;
     justify-content: flex-start;
     width: 100%;
-    padding: 0em 12em;
+    padding: 0em 12%;
     line-height: 2em;
 
 }
@@ -122,7 +122,7 @@ ol > li::marker {
 .brochure-desc{
     text-align: center;
     font-size: 1.2em;
-    margin: 1em 5em;
+    margin: 1em 5%;
     font-weight: 500;
 }
 /* End of Brochure CSS */
@@ -151,7 +151,7 @@ ol > li::marker {
 .extension-community-title{
     font-size: var(--fs-extra-large);
     font-family: 'Poppins', sans-serif;
-    font-weight: 700;  
+    font-weight: 700;
 }
 .swiper-container{
     width: 100dvw;
@@ -166,21 +166,18 @@ ol > li::marker {
     /* -webkit-box-reflect: below 1px linear-gradient(transparent,transparent,#0006); */
 }
 
- .slide-div{    
+.slide-div{
     text-align: justify;
-    margin: 0 300px;
-    height: 50vh;
- }
- .slide-div h5{    
+    margin: 0 10%;
+    min-height: 50vh;
+}
+.slide-div h5{
     text-align: center;
     font-size: 2.5em;
- }
- .slide-content-extension{
+}
+.slide-content-extension{
     font-size: 1.2em;
     text-align: center;
     margin-bottom: 5em;
- }
- /* End of Carousel CSS */
-
- 
- 
+}
+/* End of Carousel CSS */
